plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4' apply false
}

allprojects {
    group = 'io.github.yyytir777'
    version = "0.0.2"

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.13.4'
        testImplementation 'org.assertj:assertj-core:3.27.4'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }
}